[gd_scene load_steps=9 format=3 uid="uid://de5k53uwwefyc"]

[ext_resource type="Texture2D" uid="uid://mne1l002xdei" path="res://art/spike.png" id="1_s2but"]
[ext_resource type="Script" path="res://scripts/extending_spike.gd" id="1_sox20"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d7ota"]
size = Vector2(119, 131)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8wxw"]
size = Vector2(115, 231)

[sub_resource type="AtlasTexture" id="AtlasTexture_e47dw"]
atlas = ExtResource("1_s2but")
region = Rect2(0, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uqpf"]
atlas = ExtResource("1_s2but")
region = Rect2(8, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykord"]
atlas = ExtResource("1_s2but")
region = Rect2(0, 16, 8, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_n4f4h"]
animations = [{
"frames": [{
"duration": 500.0,
"texture": SubResource("AtlasTexture_e47dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uqpf")
}, {
"duration": 100.0,
"texture": SubResource("AtlasTexture_ykord")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="extendingSpike" type="Area2D"]
collision_layer = 16
script = ExtResource("1_sox20")

[node name="mediumCollider" type="CollisionShape2D" parent="."]
position = Vector2(-4.5, 46.5)
shape = SubResource("RectangleShape2D_d7ota")

[node name="extendedCollider" type="CollisionShape2D" parent="."]
position = Vector2(-6.5, -8.5)
shape = SubResource("RectangleShape2D_t8wxw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(15, 15)
sprite_frames = SubResource("SpriteFrames_n4f4h")
frame_progress = 0.980283

[node name="lifeTime" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="attack"]
[connection signal="timeout" from="lifeTime" to="." method="_on_life_time_timeout"]
